[tool.poetry]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
homepage = "https://llava-vl.github.io"
repository = "https://github.com/haotian-liu/LLaVA"
keywords = ["GPT", "Visual Assistant", "Transformers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = ">=3.8"
torch = "2.1.2"
torchvision = "0.16.2"
transformers = "4.37.2"
tokenizers = "0.15.1"
sentencepiece = "0.1.99"
shortuuid = "*"
accelerate = "0.21.0"
peft = "*"
bitsandbytes = "*"
pydantic = "*"
markdown2 = {extras = ["all"]}
numpy = "*"
scikit-learn = "1.2.2"
gradio = "4.16.0"
gradio_client = "0.8.1"
requests = "*"
httpx = "0.24.0"
uvicorn = "*"
fastapi = "*"
einops = "0.6.1"
"einops-exts" = "0.0.4"
timm = "0.6.13"

[tool.poetry.extras]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
